Make terminal input line follow content dynamically like real terminals

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,12 @@
   <div class="crt-container">
     <div class="crt-screen">
       <div class="terminal-container" id="terminal-container">
-        <main id="terminal-output" aria-live="polite"></main>
-        <div class="input-line" id="input-line">
-          <span id="prompt" class="prompt">user@portfolio:~$ </span>
-          <input type="text" id="terminal-input" class="terminal-input" autocomplete="off" spellcheck="false" autofocus>
-        </div>
+        <main id="terminal-output" aria-live="polite">
+          <div class="input-line" id="input-line">
+            <span id="prompt" class="prompt">user@portfolio:~$ </span>
+            <input type="text" id="terminal-input" class="terminal-input" autocomplete="off" spellcheck="false" autofocus>
+          </div>
+        </main>
       </div>
     </div>
   </div>
